--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,11 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.kotlinfirstdemo"
@@ -31,7 +32,7 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
-        useIR = true
+        // useIR = true
     }
     buildFeatures {
         compose true
@@ -69,4 +70,11 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.4.1"
     api files('libs/NCMB.jar')
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
+    // 同期処理用
+    def coroutines_version = '1.1.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    // Googleマップ
+    implementation 'com.google.maps.android:maps-compose:2.8.0'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
 }
